--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
-    <!-- Google tag (gtag.js) - Official Implementation -->
+    <!-- Google tag (gtag.js) - Global Site Tag -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10782185640"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -17,7 +17,8 @@
       gtag('config', 'AW-10782185640');
     </script>
     
-    <!-- Event snippet for Website call conversion - This is the key function for tracking clicks -->
+    <!-- Event snippet for Website call conversion tracking -->
+    <!-- This function sends the conversion event to Google Ads -->
     <script>
       function gtag_report_conversion(url) {
         var callback = function () {
@@ -39,7 +40,7 @@
             background-color: #f8f9fa;
             color: #212529;
             line-height: 1.7;
-            padding-bottom: 100px;
+            padding-bottom: 100px; /* Footer spacing */
         }
         .section-padding {
             padding: 4rem 1.5rem;
@@ -235,7 +236,7 @@
                 <p class="text-lg md:text-xl text-gray-800 mb-8 font-bold">
                     Select your vehicle type below to see our customized detailing packages. We bring the showroom shine to your doorstep.
                 </p>
-                <!-- CORRECTED TRACKING: Using the onclick handler for all call links -->
+                <!-- FIXED: Added onclick for conversion tracking -->
                 <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary text-lg">Get a Free Quote</a>
                 <p class="text-sm text-blue-600 mt-3 font-semibold">Call Anytime - We're Open 24/7!</p>
             </div>
@@ -251,6 +252,7 @@
                     <button id="show-suv">SUV / Truck</button>
                 </div>
 
+                <!-- Sedan Pricing -->
                 <div id="sedan-packages" class="pricing-grid" style="display: grid;">
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 1 Detail</h4>
@@ -266,6 +268,7 @@
                             <li>Surface protectent for the dash and display/controls</li>
                             <li>Steering wheel and dash clean</li>
                         </ul>
+                        <!-- FIXED: Added onclick for conversion tracking -->
                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 1</a>
                     </div>
                     <div class="pricing-card">
@@ -281,6 +284,7 @@
                             <li>Pet hair removal</li>
                             <li>Odor removal</li>
                         </ul>
+                         <!-- FIXED: Added onclick for conversion tracking -->
                          <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 2</a>
                     </div>
                     <div class="pricing-card">
@@ -298,10 +302,12 @@
                             <li>Free micrfiber cloth</li>
                             <li>Protection plan (complimentary maintenance clean within 15 days)</li>
                         </ul>
+                         <!-- FIXED: Added onclick for conversion tracking -->
                          <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 3</a>
                     </div>
                 </div>
 
+                <!-- SUV/Truck Pricing -->
                 <div id="suv-truck-packages" class="pricing-grid">
                      <div class="pricing-card">
                         <h4 class="pricing-level">Level 1 Detail</h4>
@@ -317,6 +323,7 @@
                             <li>Surface protectent for the dash and display/controls</li>
                             <li>Steering wheel and dash clean</li>
                         </ul>
+                         <!-- FIXED: Added onclick for conversion tracking -->
                          <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 1</a>
                     </div>
                     <div class="pricing-card">
@@ -332,6 +339,7 @@
                             <li>Pet hair removal</li>
                             <li>Odor removal</li>
                         </ul>
+                        <!-- FIXED: Added onclick for conversion tracking -->
                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 2</a>
                     </div>
                     <div class="pricing-card">
@@ -349,6 +357,7 @@
                             <li>Free micrfiber cloth</li>
                             <li>Protection plan (complimentary maintenance clean within 15 days)</li>
                         </ul>
+                         <!-- FIXED: Added onclick for conversion tracking -->
                          <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 3</a>
                     </div>
                 </div>
@@ -359,20 +368,20 @@
             <div class="container mx-auto text-center">
                 <h3 class="text-4xl md:text-5xl font-bold text-gray-900 text-center mb-10">What Our Customers Say</h3>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <img src="https://michieauto.com/Screenshot_20250702_134639_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_134648_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_134655_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_134713_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_134725_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_134735_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_135648_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_135557_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_135707_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_135717_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_135728_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_135753_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_135814_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_135842_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
+                    <img src="https://michieauto.com/Screenshot_20250702_134639_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
+                    <img src="https://michieauto.com/Screenshot_20250702_134648_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
+                    <img src="https://michieauto.com/Screenshot_20250702_134655_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
+                    <img src="https://michieauto.com/Screenshot_20250702_134713_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
+                    <img src="https://michieauto.com/Screenshot_20250702_134725_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
+                    <img src="https://michieauto.com/Screenshot_20250702_134735_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
+                    <img src="https://michieauto.com/Screenshot_20250702_135648_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
+                    <img src="https://michieauto.com/Screenshot_20250702_135557_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
+                    <img src="https://michieauto.com/Screenshot_20250702_135707_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
+                    <img src="https://michieauto.com/Screenshot_20250702_135717_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
+                    <img src="https://michieauto.com/Screenshot_20250702_135728_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
+                    <img src="https://michieauto.com/Screenshot_20250702_135753_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
+                    <img src="https://michieauto.com/Screenshot_20250702_135814_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
+                    <img src="https://michieauto.com/Screenshot_20250702_135842_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.onerror=null;this.src='https://placehold.co/600x400/cccccc/ffffff?text=Review+Not+Found'">
                 </div>
                 <p class="mt-8 text-lg">
                     Read more of our google reviews <a href="https://maps.app.goo.gl/6vQ1RpysjA3g7gXs6" target="_blank" class="text-blue-600 font-bold hover:underline">here</a>.
@@ -387,6 +396,7 @@
         </p>
         <div class="text-right">
              <span class="text-sm font-semibold text-blue-600 block">AVAILABLE 24/7</span>
+            <!-- FIXED: Added onclick for conversion tracking -->
             <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn-call-to-action mt-1">
                 <svg class="w-6 h-6 mr-3" fill="currentColor" viewBox="0 0 20 20"><path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path></svg>
                 Call Now: (405) 295-5189
@@ -395,6 +405,7 @@
     </footer>
 
     <script>
+        // JavaScript for the vehicle type toggle switch
         document.addEventListener('DOMContentLoaded', function () {
             const sedanBtn = document.getElementById('show-sedan');
             const suvBtn = document.getElementById('show-suv');
@@ -412,13 +423,13 @@
                 suvBtn.classList.add('active');
                 sedanBtn.classList.remove('active');
                 suvPackages.style.display = 'grid';
-                suvPackages.style.display = 'none';
+                sedanPackages.style.display = 'none';
             }
 
             sedanBtn.addEventListener('click', showSedan);
             suvBtn.addEventListener('click', showSuv);
 
-            // Initially show sedan packages
+            // Initially show sedan packages by default
             showSedan();
         });
     </script>
