--- a/index.html
+++ b/index.html
@@ -17,21 +17,12 @@
       gtag('config', 'AW-10782185640');
     </script>
     
-    <!-- Event snippet for Website call conversion tracking -->
-    <!-- This function sends the conversion event to Google Ads -->
+    <!-- Phone snippet for Website phone call conversions (Call Forwarding) -->
+    <!-- This script tells Google to replace your number with a forwarding number -->
     <script>
-      function gtag_report_conversion(url) {
-        var callback = function () {
-          if (typeof(url) != 'undefined') {
-            window.location = url;
-          }
-        };
-        gtag('event', 'conversion', {
-            'send_to': 'AW-10782185640/PPImCJ-a7eIaEKixrJUo',
-            'event_callback': callback
-        });
-        return false;
-      }
+      gtag('config', 'AW-10782185640/PPImCJ-a7eIaEKixrJUo', {
+        'phone_conversion_number': '4052955189'
+      });
     </script>
 
     <style>
@@ -236,8 +227,8 @@
                 <p class="text-lg md:text-xl text-gray-800 mb-8 font-bold">
                     Select your vehicle type below to see our customized detailing packages. We bring the showroom shine to your doorstep.
                 </p>
-                <!-- FIXED: Added onclick for conversion tracking -->
-                <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary text-lg">Get a Free Quote</a>
+                <!-- FIXED: Removed onclick handler to allow for call forwarding -->
+                <a href="tel:+14052955189" class="btn btn-secondary text-lg">Get a Free Quote</a>
                 <p class="text-sm text-blue-600 mt-3 font-semibold">Call Anytime - We're Open 24/7!</p>
             </div>
         </section>
@@ -268,8 +259,8 @@
                             <li>Surface protectent for the dash and display/controls</li>
                             <li>Steering wheel and dash clean</li>
                         </ul>
-                        <!-- FIXED: Added onclick for conversion tracking -->
-                        <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 1</a>
+                        <!-- FIXED: Removed onclick handler -->
+                        <a href="tel:+14052955189" class="btn btn-secondary">Book Level 1</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 2 Detail</h4>
@@ -284,8 +275,8 @@
                             <li>Pet hair removal</li>
                             <li>Odor removal</li>
                         </ul>
-                         <!-- FIXED: Added onclick for conversion tracking -->
-                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 2</a>
+                         <!-- FIXED: Removed onclick handler -->
+                         <a href="tel:+14052955189" class="btn btn-secondary">Book Level 2</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 3 Detail</h4>
@@ -302,8 +293,8 @@
                             <li>Free micrfiber cloth</li>
                             <li>Protection plan (complimentary maintenance clean within 15 days)</li>
                         </ul>
-                         <!-- FIXED: Added onclick for conversion tracking -->
-                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 3</a>
+                         <!-- FIXED: Removed onclick handler -->
+                         <a href="tel:+14052955189" class="btn btn-secondary">Book Level 3</a>
                     </div>
                 </div>
 
@@ -323,8 +314,8 @@
                             <li>Surface protectent for the dash and display/controls</li>
                             <li>Steering wheel and dash clean</li>
                         </ul>
-                         <!-- FIXED: Added onclick for conversion tracking -->
-                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 1</a>
+                         <!-- FIXED: Removed onclick handler -->
+                         <a href="tel:+14052955189" class="btn btn-secondary">Book Level 1</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 2 Detail</h4>
@@ -339,8 +330,8 @@
                             <li>Pet hair removal</li>
                             <li>Odor removal</li>
                         </ul>
-                        <!-- FIXED: Added onclick for conversion tracking -->
-                        <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 2</a>
+                        <!-- FIXED: Removed onclick handler -->
+                        <a href="tel:+14052955189" class="btn btn-secondary">Book Level 2</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 3 Detail</h4>
@@ -357,8 +348,8 @@
                             <li>Free micrfiber cloth</li>
                             <li>Protection plan (complimentary maintenance clean within 15 days)</li>
                         </ul>
-                         <!-- FIXED: Added onclick for conversion tracking -->
-                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 3</a>
+                         <!-- FIXED: Removed onclick handler -->
+                         <a href="tel:+14052955189" class="btn btn-secondary">Book Level 3</a>
                     </div>
                 </div>
             </div>
@@ -396,8 +387,8 @@
         </p>
         <div class="text-right">
              <span class="text-sm font-semibold text-blue-600 block">AVAILABLE 24/7</span>
-            <!-- FIXED: Added onclick for conversion tracking -->
-            <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn-call-to-action mt-1">
+            <!-- FIXED: Removed onclick handler -->
+            <a href="tel:+14052955189" class="btn-call-to-action mt-1">
                 <svg class="w-6 h-6 mr-3" fill="currentColor" viewBox="0 0 20 20"><path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path></svg>
                 Call Now: (405) 295-5189
             </a>
