--- a/bnpl.html
+++ b/bnpl.html
@@ -165,6 +165,9 @@
 
         <div class="card p-6 sm:p-8 lg:p-10 mb-10">
             <h2 class="text-3xl font-bold text-white mb-6 text-center">What Your Level 2 Detail Includes</h2>
+            
+            <img src="https://michieauto.com/c6106051-ecc6-4964-9246-4c79215cdb5d~1.jpg" alt="Expertly detailed car interior showcasing clean leather seats and dashboard" class="w-full h-auto rounded-lg mb-6 shadow-lg">
+
             <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-4">
                 <ul class="feature-list">
                     <li>External high pressure wash</li>
