--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 
-    <!-- Google tag (gtag.js) - Global Site Tag -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10782185640"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -17,7 +16,6 @@
       gtag('config', 'AW-10782185640');
     </script>
     
-    <!-- Phone snippet for Website phone call conversions (Call Forwarding) -->
     <script>
       gtag('config', 'AW-10782185640/PPImCJ-a7eIaEKixrJUo', {
         'phone_conversion_number': '4052955189',
@@ -260,11 +258,16 @@
                 <p class="text-lg md:text-xl text-gray-800 mb-8 font-bold">
                     Select your vehicle type below to see our customized detailing packages. We bring the showroom shine to your doorstep.
                 </p>
-                <!-- FIXED: Phone number is now visually hidden -->
-                <a href="tel:+14052955189" class="btn btn-secondary text-lg">
-                    <span>Get a Free Quote</span>
-                    <span class="visually-hidden call-tracking-number">(405) 295-5189</span>
-                </a>
+                <div class="flex flex-col items-center space-y-4">
+                    <a href="tel:+14052955189" class="btn btn-secondary text-lg">
+                        <span>Get a Free Quote</span>
+                        <span class="visually-hidden call-tracking-number">(405) 295-5189</span>
+                    </a>
+                    <a href="tel:+14052955189" class="btn text-lg">
+                        <span>Apply for Financing</span>
+                        <span class="visually-hidden call-tracking-number">(405) 295-5189</span>
+                    </a>
+                </div>
                 <p class="text-sm text-blue-600 mt-3 font-semibold">Call Anytime - We're Open 24/7!</p>
             </div>
         </section>
@@ -277,13 +280,11 @@
                 <div class="vehicle-toggle">
                     <button id="show-sedan" class="active">4 Door Sedan</button>
                     <button id="show-suv">SUV / Truck</button>
-                    <!-- NEW "Buy Now, Pay Later" button -->
                     <a href="https://michieauto.com/bnpl" target="_blank" class="bnpl-link-button">
                         <button>Buy Now, Pay Later</button>
                     </a>
                 </div>
 
-                <!-- Sedan Pricing -->
                 <div id="sedan-packages" class="pricing-grid" style="display: grid;">
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 1 Detail</h4>
@@ -299,7 +300,6 @@
                             <li>Surface protectent for the dash and display/controls</li>
                             <li>Steering wheel and dash clean</li>
                         </ul>
-                        <!-- FIXED: Phone number is now visually hidden -->
                         <a href="tel:+14052955189" class="btn btn-secondary">
                             <span>Book Level 1</span>
                             <span class="visually-hidden call-tracking-number">(405) 295-5189</span>
@@ -318,7 +318,6 @@
                             <li>Pet hair removal</li>
                             <li>Odor removal</li>
                         </ul>
-                         <!-- FIXED: Phone number is now visually hidden -->
                          <a href="tel:+14052955189" class="btn btn-secondary">
                             <span>Book Level 2</span>
                             <span class="visually-hidden call-tracking-number">(405) 295-5189</span>
@@ -339,7 +338,6 @@
                             <li>Free micrfiber cloth</li>
                             <li>Protection plan (complimentary maintenance clean within 15 days)</li>
                         </ul>
-                         <!-- FIXED: Phone number is now visually hidden -->
                          <a href="tel:+14052955189" class="btn btn-secondary">
                             <span>Book Level 3</span>
                             <span class="visually-hidden call-tracking-number">(405) 295-5189</span>
@@ -347,7 +345,6 @@
                     </div>
                 </div>
 
-                <!-- SUV/Truck Pricing -->
                 <div id="suv-truck-packages" class="pricing-grid">
                      <div class="pricing-card">
                         <h4 class="pricing-level">Level 1 Detail</h4>
@@ -363,7 +360,6 @@
                             <li>Surface protectent for the dash and display/controls</li>
                             <li>Steering wheel and dash clean</li>
                         </ul>
-                         <!-- FIXED: Phone number is now visually hidden -->
                          <a href="tel:+14052955189" class="btn btn-secondary">
                             <span>Book Level 1</span>
                             <span class="visually-hidden call-tracking-number">(405) 295-5189</span>
@@ -382,7 +378,6 @@
                             <li>Pet hair removal</li>
                             <li>Odor removal</li>
                         </ul>
-                        <!-- FIXED: Phone number is now visually hidden -->
                         <a href="tel:+14052955189" class="btn btn-secondary">
                             <span>Book Level 2</span>
                             <span class="visually-hidden call-tracking-number">(405) 295-5189</span>
@@ -403,7 +398,6 @@
                             <li>Free micrfiber cloth</li>
                             <li>Protection plan (complimentary maintenance clean within 15 days)</li>
                         </ul>
-                         <!-- FIXED: Phone number is now visually hidden -->
                          <a href="tel:+14052955189" class="btn btn-secondary">
                             <span>Book Level 3</span>
                             <span class="visually-hidden call-tracking-number">(405) 295-5189</span>
