--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <main class="flex-grow">
         <section class="hero-section section-padding text-center">
             <iframe class="hero-video"
-                    src="https://www.youtube.com/embed/4TVz77zWMic?autoplay=1&mute=1&loop=1&playlist=4TVz77zWMic&controls=0&showinfo=0&modestbranding=1&playsinline=1"
+                    src="http://www.youtube.com/embed/2?playlist=31&autoplay=1&loop=1&controls=0&showinfo=0&autohide=1&mute=1"
                     frameborder="0"
                     allow="autoplay; encrypted-media"
                     allowfullscreen>
