--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <main class="flex-grow">
         <section class="hero-section section-padding text-center">
             <iframe class="hero-video"
-                    src="http://www.youtube.com/embed/2?playlist=31&autoplay=1&loop=1&controls=0&showinfo=0&autohide=1&mute=1"
+                    src="https://youtu.be/TsOqZj5PIbM"
                     frameborder="0"
                     allow="autoplay; encrypted-media"
                     allowfullscreen>
